@@ -58,6 +58,11 @@ public class Client extends Application implements EventHandler<KeyEvent>, Seria
     @Override
     public void start(Stage primaryStage) throws Exception {
 
+        primaryStage.setTitle("LOL");
+        //javafx.controls
+        //--module-path "/YOUR/PATH/TO/javafx-sdk-11.0.2/lib" --add-modules javafx.controls,javafx.fxml*/
+
+
         MapJungle map = new MapJungle();
         VBox vBox = new VBox();
         HBox hBox = new HBox();
